Graph4j bonus